# airflow-pybr-2021

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
dags/: fifth_dag.py  first_dag.py  five_min_dag.py  fourth_dag.py  movie_chooser.py  second_dag.py  third_dag.py
